--- a/mis/Makefile
+++ b/mis/Makefile
@@ -195,7 +195,7 @@ INC_ALL_XCLBINS=1
 L2_TOP_DIR_F1 = $(GRAPH_ANALYTICS_DIR)/L2/mis_kernel
 L2_XDEVICE_F1 = xilinx_aws-vu9p-f1_shell-v04261818_201920_3
 L2_BUILD_DIR_F1 = $(L2_TOP_DIR_F1)/build_dir.hw.$(L2_XDEVICE_F1)
-XCLBIN_NAME_F1 = misKernel.awsxclbin
+XCLBIN_NAME_F1 = `
 XCLBIN_FILE_F1 = $(L2_BUILD_DIR_F1)/$(XCLBIN_NAME_F1)
 XCLBIN_INSTALLED_NAME_F1 = mis_xilinx_aws-vu9p-f1_shell-v04261818_201920_3.awsxclbin
 XCLBIN_INSTALLED_F1 =/opt/xilinx/apps/graphanalytics/mis/$(PRODUCT_VER)/xclbin/$(XCLBIN_INSTALLED_NAME_F1)
