update device probe API

--- a/L2/mis_kernel/Makefile
+++ b/L2/mis_kernel/Makefile
@@ -43,11 +43,9 @@ DEVICE ?= xilinx_u50_gen3x16_xdma_201920_3
 
 # #################### Checking if DEVICE in whitelist ############################
 ifneq ($(findstring u250, $(DEVICE)), u250)
-ifneq ($(findstring u200, $(DEVICE)), u200)
 ifneq ($(findstring u50, $(DEVICE)), u50)
 ifneq ($(findstring u55c, $(DEVICE)), u55c)
 $(error [ERROR]: This project is not supported for $(DEVICE).)
-endif
 endif
 endif
 endif
@@ -84,18 +82,13 @@ VPP_LDFLAGS_misKernel_temp := --config $(CUR_DIR)/opts.cfg
 
 VPP_FLAGS += -DMIS_maxRows=1024000 
 
-ifneq (,$(shell echo $(XPLATFORM) | awk '/u200/'))
-VPP_LDFLAGS_misKernel_temp += --config $(CUR_DIR)/conn_u200c.cfg
-VPP_LDFLAGS_misKernel_temp += --kernel_frequency 300
-SRCS=$(XFLIB_DIR)/mis_kernel/src/misKernel_ddr.cpp
-VPP_FLAGS += -DMIS_numChannels=16
-endif
-
 ifneq (,$(shell echo $(XPLATFORM) | awk '/u250/'))
 VPP_LDFLAGS_misKernel_temp += --config $(CUR_DIR)/conn_u250.cfg
 VPP_LDFLAGS_misKernel_temp += --kernel_frequency 300
+VPP_LDFLAGS_misKernel_temp += --advanced.param compiler.acceleratorBinaryContent=dcp 
 SRCS=$(XFLIB_DIR)/mis_kernel/src/misKernel_ddr.cpp
 VPP_FLAGS += -DMIS_numChannels=16
+VPP_FLAGS += -DMIS_entries=1
 endif
 
 ifneq (,$(shell echo $(XPLATFORM) | awk '/u55c/'))
