--- a/plugin/tigergraph/mis/Makefile
+++ b/plugin/tigergraph/mis/Makefile
@@ -42,6 +42,8 @@ STAGE_COPY_FILES = \
     \
     $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks100.csv) \
     $(wildcard $(EXAMPLE_DIR)/data/travelplan2workorders100.csv) \
+    $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks2000.csv) \
+    $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks2000.csv) \
 	$(EXAMPLE_DIR)/README.md \
     $(EXAMPLE_DIR)/bin/common.sh \
     $(EXAMPLE_DIR)/bin/set-plugin-vars.sh \
