Checked in Quality Improvements:
* Added travelplans TG demo python script
* Added path update rules for Python script and Notebook
* Added TG CPU query execution time
* Added Alveo query UDF error checks and messages
* Added speedup print in shell script runs
* Changed shell scirpt default run to CPU+Alveo

--- a/plugin/tigergraph/mis/Makefile
+++ b/plugin/tigergraph/mis/Makefile
@@ -43,7 +43,7 @@ STAGE_COPY_FILES = \
     $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks100.csv) \
     $(wildcard $(EXAMPLE_DIR)/data/travelplan2workorders100.csv) \
     $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks2000.csv) \
-    $(wildcard $(EXAMPLE_DIR)/data/travelplan2trucks2000.csv) \
+    $(wildcard $(EXAMPLE_DIR)/data/travelplan2workorders2000.csv) \
 	$(EXAMPLE_DIR)/README.md \
     $(EXAMPLE_DIR)/bin/common.sh \
     $(EXAMPLE_DIR)/bin/set-plugin-vars.sh \
@@ -57,6 +57,7 @@ STAGE_COPY_FILES = \
     \
     $(EXAMPLE_DIR)/bin/run.sh \
     $(EXAMPLE_DIR)/jupyter/travelplan-jupyter-tg.ipynb \
+    $(EXAMPLE_DIR)/jupyter/travelplan-python-tg.py \
 
 # Example directories into which to copy example common files
 STAGE_EXAMPLES_DIRS = $(EXAMPLE_DIR)
@@ -64,7 +65,9 @@ STAGE_EXAMPLES_DIRS = $(EXAMPLE_DIR)
 include ../common/Makefile-common.mk
 
 update-version:
-	sed -i 's,/graphanalytics/STANDALONE_NAME/.*,/graphanalytics/STANDALONE_NAME/$(PRODUCT_VER),g' bin/set-plugin-vars.sh
+	sed -i 's,/graphanalytics/$(STANDALONE_NAME)/.*,/graphanalytics/$(STANDALONE_NAME)/$(PRODUCT_VER),g' bin/set-plugin-vars.sh
+	sed -i 's,/$(STANDALONE_NAME)/.*/examples,/$(STANDALONE_NAME)/$(PRODUCT_VER)/examples,g' examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
+	sed -i 's,/$(STANDALONE_NAME)/.*/examples,/$(STANDALONE_NAME)/$(PRODUCT_VER)/examples,g' examples/travelplan/jupyter/travelplan-python-tg.py
 
 stage: update-version stage-common
 
