Updated pacakge generation scripts

--- a/mis/package/Makefile
+++ b/mis/package/Makefile
@@ -23,17 +23,17 @@ else ifeq ($(OSDIST),CentOS)
     DIST_TARGET = rpm
 endif
 
-package:$(PKGDIR)
+package: $(PKGDIR)
 	cd $(PKGDIR); \
 	cmake -DCMAKE_BUILD_TYPE=Release -DPROD_VERSION=${PROD_VERSION} -DCMAKE_INSTALL_PREFIX=/opt/xilinx/apps/graphanalytics/  ..;\
 	cmake --build .;\
 	cpack -B $(shell pwd) ; \
 	cd ..; \
-	echo rm ${PKGDIR} -r; 
+	rm ${PKGDIR} -r; 
 
 
 $(PKGDIR):
 	mkdir $(PKGDIR); 
 
 clean:
-	rm -rf _CPack_Packages
+	rm -rf _CPack_Packages ${PKGDIR}
